// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/CodeField render correctly with value blur 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 24,
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 144,
        "minWidth": 204,
      },
      undefined,
    ]
  }
>
  <TextInput
    accessibilityLabel="codeField"
    allowFontScaling={false}
    importantForAutofill="no"
    keyboardType="numeric"
    maxLength={1}
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    placeholderTextColor="#9BA1B0"
    selectionColor="#2B78EE"
    style={
      Array [
        Object {
          "flex": 1,
          "padding": 0,
          "textAlign": "center",
        },
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 60,
          "lineHeight": 72,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`@npm/mobydick-core/CodeField render correctly with value focus 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 24,
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 144,
        "minWidth": 204,
      },
      undefined,
    ]
  }
>
  <TextInput
    accessibilityLabel="codeField"
    allowFontScaling={false}
    importantForAutofill="no"
    keyboardType="numeric"
    maxLength={1}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    placeholderTextColor="#9BA1B0"
    selectionColor="#2B78EE"
    style={
      Array [
        Object {
          "flex": 1,
          "padding": 0,
          "textAlign": "center",
        },
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 60,
          "lineHeight": 72,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`@npm/mobydick-core/CodeField render correctly with value onKeyPress 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 24,
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 144,
        "minWidth": 204,
      },
      undefined,
    ]
  }
>
  <TextInput
    accessibilityLabel="codeField"
    allowFontScaling={false}
    importantForAutofill="no"
    keyboardType="numeric"
    maxLength={1}
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    placeholderTextColor="#9BA1B0"
    selectionColor="#2B78EE"
    style={
      Array [
        Object {
          "flex": 1,
          "padding": 0,
          "textAlign": "center",
        },
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 60,
          "lineHeight": 72,
        },
        undefined,
      ]
    }
  />
</View>
`;
